--- a/haskell.highlighted.html
+++ b/haskell.highlighted.html
@@ -1118,4 +1118,82 @@ Prelude> 4 / fromIntegral(length [1,2,3])
 この <code>Eq</code> は正味比較して等しいかどうかを判断できるもの，みたいなアレ．non-functional なのはだいたいこれらしい．<br /> 
 typeclass のもっとすごい力とか，カスタマイズの仕方とかは，後々出てくるのでお待ちください．
 <h2> Building Vocabulary </h2>
+<h3> Function composition </h3>
+<p> 
+関数の合成というかなんというか．普通に g(f(x)) な感じでよろしい．
+<pre style="background:#000;color:#f8f8f8">
+f x <span style="color:#e28964">=</span> x <span style="color:#e28964">+</span> <span style="color:#3387cc">3</span>
+square x <span style="color:#e28964">=</span> x * x
+</pre>
+で
+<pre style="background:#000;color:#f8f8f8">
+Prelude> square(f 1)
+16
+Prelude> square(f 2)
+25
+Prelude> f (square 1)
+4
+Prelude> f (square 4)
+19
+</pre>
+という感じ．
+<pre style="background:#000;color:#f8f8f8">
+g x <span style="color:#e28964">=</span> f (square x)
+</pre>
+みたいな書き方もできます．<br />
+これ，括弧がないと <code>f square</code> を計算しようとして上手く行きません．<br />
+関数の合成には特別な書き方もあります： 数学で関数の合成の時に使う記号を模した<code>(.)</code> を使って
+<pre style="background:#000;color:#f8f8f8">
+g x <span style="color:#e28964">=</span> (f <span style="color:#e28964">.</span> square) x
+</pre>
+そしてこれは
+<pre style="background:#000;color:#f8f8f8">
+g  <span style="color:#e28964">=</span> f <span style="color:#e28964">.</span> square
+</pre>
+と書いても動くがどちらが推奨されてるのかは知らない．
+</p>
 
+<h3> The need for a vocabulary </h3>
+<p>
+さてこうして関数の合成もできるようになり，あと再帰でもやれば色々書けるようになる，のだが，<br />
+その際には Haskell の standard libraries に何があるのかをある程度知っていることは，<br />
+コードの効率とか読みやすさ書きやすさ上結構重要になってきます．<br />
+<small>standard libraries にある関数を自分で書き直すのももちろん勉強になるけどね．</small><br />
+というわけで，そのへんのこと，どう調べたらいいか，とかのお話．
+</p>
+
+<h3> Prelude and the hierarchical libraries </h3>
+<p>
+とうとう来ました．ghci を起動するときに出てくるアレ．
+<pre style="background:#000;color:#f8f8f8">
+Prelude> 
+</pre>
+この <code>Prelude</code> はすべての Haskell プログラムでデフォルトで読み込まれる core library.  <br />
+これまで扱ったようなごく基本的な関数や，<code>map</code> とか <code>filter</code> みたいなもうちょっと高級な（？）ものなど．<br />
+そしてデフォルトでは読み込まれずに <code>import</code> (ghci からは <code>:module</code>) する必要のある module たち，<br />
+hierarchical libraries がある．<br />
+例えば <code>permutations</code> という関数が <code>Data.List</code> にあって，これを使うときはソースで
+<pre style="background:#000;color:#f8f8f8">
+<span style="color:#e28964">import</span> <span style="color:#9b859d">Data.List</span>
+testPermitations <span style="color:#e28964">=</span> permutations <span style="color:#65b042">"Prelude"</span>
+</pre>
+ghci から読み込む場合は，前にも書いた通り
+<pre style="background:#000;color:#f8f8f8">
+Prelude> :m Data.List
+</pre>
+複数読み込む（読み込まれる module を追加していく）時は
+<pre style="background:#000;color:#f8f8f8">
+Prelude> :m +Data.List
+</pre>
+と <code>+</code> を使う．<br />
+折角だから使ってみましょう
+<pre style="background:#000;color:#f8f8f8">
+Prelude> :m +Data.List 
+Prelude Data.List> :t permutations 
+permutations :: [a] -> [[a]]
+Prelude Data.List> permutations "sll"
+["sll","lsl","lls","lls","lsl","sll"]
+</pre>
+つまるところこの <code>></code> の左側にあるのは現在読み込まれてるライブラリ，という感じ．
+</p>
+<h3> One exhibit </h3>
